<resources>
    <string name="app_name">Softie</string>

    <!-- bear type -->
    <string name="brown">BROWN</string>
    <string name="red">RED</string>
    <string name="white">WHITE</string>
    <string name="gray">GRAY</string>
    <string name="none">NONE</string>

    <!-- util -->
    <string name="finish_app_toast_msg">뒤로가기를 한 번 더 누르면 종료됩니다</string>
    <string name="refresh_error">자동로그인이 만료되었습니다. 다시 로그인해주시기 바랍니다.</string>

    <!-- login -->
    <string name="login_content">날 꺼내줘!</string>

    <!-- daily routine add -->
    <string name="daily_routine_add_title">데일리 루틴 추가</string>
    <string name="daily_routine_add_btn">이 루틴을 추가할래</string>
    <string name="daily_routine_add_theme_name">상쾌한 아침</string>
    <string name="daily_routine_add_card_name">일어나면 \n5분 안에 이불 개기</string>

    <!-- onboarding -->
    <string name="onboarding_choice_theme_btn">다 선택했어</string>
    <string name="theme_text">하루의 시작</string>
    <string name="onboarding_choice_theme_speech">안녕 난 %s!\n나와 함께 루틴을 만들어볼까?</string>
    <string name="onboarding_choice_theme_speech_after">관심 있는 테마 3개 선택해줘!</string>
    <string name="onboarding_choice_routine_speech">관심사를 바탕으로 목록을 추천해줄게.\n이 중에 데일리 루틴 3개를 선택해봐!</string>
    <string name="routine_text">하루 한 번 엘레베이터 대신 계단 이용하기</string>
    <string name="onboarding_routine_back_btn">테마 다시 고를래</string>
    <string name="onboarding_routine_select_btn">친구 만날 준비 끝!</string>
    <string name="onboarding_routine_notice">최대 3개 선택 가능합니다</string>

    <!-- story telling -->
    <string name="story_telling_intro">오늘도 고된 하루였어..</string>
    <string name="story_telling_main">어? 집 앞에 이건 뭐지?</string>
    <string name="story_telling_conclusion">한 번 열어볼까?</string>


    <!-- add list -->
    <string name="add_list_title">루틴 추가</string>
    <string name="add_list_maker_recommend">이런 루틴은 어때요?</string>
    <string name="add_list_theme_title">전체 루틴 테마</string>
    <string name="add_routine_list_item_content">사람들과 어울리는</string>
    <string name="add_routine_list_item_title">관계 쌓기</string>


    <!-- happy routine -->
    <string name="happy_title">행복 루틴</string>
    <string name="happy_default_mention">행복 루틴은 행복한 나를 매일\n조금씩 만들어 가는 특별한 루틴이야</string>
    <string name="happy_empty_card">진행 중인 행복루틴이 없어요.\n루틴을 추가할까요?</string>
    <string name="happy_add_title">행복 루틴 추가</string>
    <string name="happy_routine_complete_title">행복 루틴을 완료했어요!</string>
    <string name="happy_routine_complete_subtitle">행복 솜뭉치 1개 획득</string>
    <string name="happy_routine_delete_snack_bar">행복 루틴을 삭제했어요</string>
    <string name="happy_routine_add_snack_bar">행복 루틴을 추가했어요</string>

    <!-- happy add list -->
    <string name="chip_item_happy_all">전체</string>
    <string name="chip_item_happy_relationship">관계 쌓기</string>
    <string name="chip_item_happy_all_one_growth">한 걸음 성장</string>
    <string name="chip_item_happy_resilience">회복탄력성</string>
    <string name="chip_item_happy_new_me">새로운 나</string>
    <string name="chip_item_happy_mindfulness">마음 챙김</string>
    <string name="happy_add_list_item_content">성숙한 사랑을 만나기 위한</string>
    <string name="happy_add_bottom_sheet_title">행복 루틴을 추가할까요?</string>
    <string name="happy_add_bottom_sheet_do_btn">추가할래</string>
    <string name="happy_add_bottom_sheet_back_btn">아니, 더 고민할게</string>

    <!-- happy add detail -->
    <string name="happy_detail_button">이 루틴을 추가할래</string>

    <!-- happy progress -->
    <string name="happy_progress_title">행복 루틴</string>
    <string name="happy_progress_edit">편집</string>
    <string name="happy_progress_mention">달성 중...</string>
    <string name="happy_progress_button">완료하기</string>
    <string name="happy_progress_bottom_sheet_title">행복 루틴을 완료했나요?</string>
    <string name="happy_progress_bottom_sheet_content">한 번 완료하면 이전으로 되돌릴 수 없어요</string>
    <string name="happy_progress_sheet_do_btn">완료했어</string>
    <string name="happy_progress_sheet_back_btn">아니, 아직이야</string>

    <!-- happy delete -->
    <string name="happy_delete_destroy">취소</string>
    <string name="happy_delete_button">삭제하기</string>
    <string name="happy_delete_bottom_sheet_title">정말 삭제할까요?</string>
    <string name="happy_delete_bottom_sheet_do_btn">삭제할래</string>
    <string name="happy_delete_bottom_sheet_back_btn">더 생각해볼래</string>

    <!-- doll selection -->
    <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
    <string name="doll_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
    <string name="doll_selection_button">이 친구와 함께 할래</string>

    <!-- splash -->
    <string name="splash_content">하루를 바꾸는 가장 사소한 루틴</string>

    <!-- bottom navigation -->
    <string name="bottom_navigation_daily_routine">데일리 루틴</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_happiness_routine">행복 루틴</string>

    <!-- setting -->
    <string name="setting_title">설정</string>
    <string name="setting_user_security">개인정보 처리방침</string>
    <string name="setting_document">서비스 이용 약관</string>
    <string name="setting_guide">서비스 이용 가이드</string>
    <string name="setting_feedback">피드백</string>
    <string name="setting_version">현재 버전 1.0.0</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_user_exit"><u>회원 탈퇴</u></string>
    <string name="user_exit_title">소프티를 정말 탈퇴하시나요?</string>
    <string name="user_exit_content">탈퇴하면 계정이 삭제되고 모든 데이터가 사라집니다.</string>
    <string name="user_exit_speech_content">정말 가는 거야..?\n나는 영영 사라져</string>
    <string name="user_exit_back">더 써볼래</string>
    <string name="user_exit_exit">탈퇴할래</string>
    <string name="user_security_title">소프티 개인정보처리방침</string>
    <string name="user_logout_title">정말 로그아웃할까요?</string>
    <string name="user_logout_content">“잠시만 안녕.. 다음에 또 봐!”</string>
    <string name="user_logout_back">취소</string>
    <string name="user_logout_exit">로그아웃 할래</string>
    <string name="setting_user_security_link">https://softie-link.notion.site/c2435b30cfdb45db82f91cae6d1cc789</string>
    <string name="setting_service_document_link">https://softie-link.notion.site/b8b8c02805924f2ababd4de7b2306d64</string>
    <string name="setting_feedback_link">https://docs.google.com/forms/d/e/1FAIpQLSfEtF_qWDu9mI1IcEBPTWsoBVCwPa0wunQK600EcjOMbz8upQ/viewform</string>

    <!-- bottom sheet -->
    <string name="bottom_sheet_title">정말 로그아웃할까요?</string>
    <string name="bottom_sheet_content">&quot;잠시만 안녕..다음에 또 봐!&quot;</string>
    <string name="bottom_sheet_back">취소</string>
    <string name="bottom_sheet_do">로그아웃 할래</string>

    <!-- bear selection -->
    <string name="bear_selection_question">어떤 친구와 함께 할까요?</string>
    <string name="bear_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
    <string name="bear_selection_button">이 친구와 함께 할래</string>

    <!-- bear naming -->
    <string name="bear_naming_question">좋은 선택이에요!\n친구 이름도 지어볼까요?</string>
    <string name="bear_naming_subtitle">한 번 지은 이름은 평생 가요.</string>
    <string name="bear_naming_hint">소프티</string>
    <string name="bear_naming_button">이 이름이 좋겠어</string>
    <string name="bear_naming_special_character_warning">*숫자와 특수문자는 사용할 수 없어요</string>
    <string name="bear_naming_length_warning">*10글자 이내로 작성해 주세요.</string>

    <!-- daily routine edit -->
    <string name="daily_routine_edit_name">데일리 루틴</string>
    <string name="daily_routine_edit_cancel">취소</string>
    <string name="daily_routine_edit">편집</string>
    <string name="daily_routine_edit_delete">%s개 삭제</string>
    <string name="daily_routine_edit_delete_num">데일리 루틴을 %d개 삭제했어요</string>

    <!-- daily routine -->
    <string name="daily_routine_user_add">이불 개기</string>
    <string name="daily_routine_ing">%s번째 달성 중</string>
    <string name="daily_routine_fin_btn">완료하기</string>
    <string name="daily_routine_fin">달성완료</string>
    <string name="daily_routine_complete_title">데일리 루틴을 완료했어요!</string>
    <string name="daily_routine_complete_subtitle">솜뭉치 1개 획득</string>
    <string name="daily_routine_complete_question">데일리 루틴을 완료했나요?</string>
    <string name="daily_routine_complete_notice">한 번 완료하면 이전으로 되돌릴 수 없어요</string>
    <string name="daily_routine_complete_yet">아니, 아직이야!</string>
    <string name="daily_routine_complete_fix">완료했어</string>

    <!-- home -->
    <string name="home_som_count">%d개</string>
    <string name="home_happiness_cotton_btn">행복 솜뭉치 주기</string>
    <string name="home_daily_cotton_btn">솜뭉치 주기</string>
    <string name="my_page_policy_link">https://softie-link.notion.site/92fc58e36cf448eca66ee47e1c50bee8</string>

    <!-- daily routine add -->
    <string name="daily_routine_add_question">데일리 루틴을 추가할까요?</string>
    <string name="daily_routine_content">일어나면 5분 안에 이불개기</string>
    <string name="daily_routine_add_no">아니, 더 고민할게</string>
    <string name="daily_routine_add_yes">추가할래</string>
    <string name="daily_routine_add_snack_bar">데일리 루틴을 1개 추가했어요</string>
    <string name="daily_routine_basic_bottom_sheet_content">언제든지 변경할 수 있어요!</string>
    <string name="daily_routine_edit_delete_notice">루틴을 삭제해도 달성 횟수는 저장돼요</string>
    <string name="daily_routine_edit_delete_question">정말 삭제할까요?</string>
    <string name="daily_routine_edit_delete_cancel">취소</string>
    <string name="daily_routine_edit_delete_fix">삭제할래</string>

    <!-- update dialog -->
    <string name="dialog_update_recommend_deny_btn">다음에 할래요</string>
    <string name="dialog_update_recommend_confirm_btn">업데이트</string>
    <string name="dialog_update_force_btn">업데이트 하러가기</string>
    <string name="dialog_update_title">새로운 버전이 업데이트 되었어요!</string>
    <string name="dialog_update_content">안정적인 서비스 사용을 위해\n최신버전으로 업데이트해주세요.</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="dialog_update_store_link">https://play.google.com/store/apps/details?id=com.sopetit.softie</string>

    <!-- maker dialog -->
    <string name="maker_help_dialog_title">루틴메이커 테마란?</string>
    <string name="maker_help_dialog_content">전문가들이 만드는 루틴을 직접 실천해 볼 수 있는 테마에요.</string>

    <!-- tutorial -->
    <string name="home_tutorial_title_routine">소프티엔 총 2가지 루틴이 있어요!</string>
    <string name="home_tutorial_title_cotton">솜뭉치를 얻으면?</string>
    <string name="home_tutorial_btn_next">다음</string>
    <string name="home_tutorial_btn_start">시작하기</string>

</resources>
