<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_happy_add_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_happy_add_title"
            style="@style/head3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/happy_add_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_happy_add_back_arrow"
            app:layout_constraintStart_toEndOf="@id/iv_happy_add_back_arrow"
            app:layout_constraintTop_toTopOf="@id/iv_happy_add_back_arrow" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_happy_add_category_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            app:chipSpacing="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_happy_add_title"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_item_happy_all"
                style="@style/Style.Material3.Chip.Softie.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_item_happy_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_item_happy_relationship"
                style="@style/Style.Material3.Chip.Softie.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_item_happy_relationship" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_item_happy_all_one_growth"
                style="@style/Style.Material3.Chip.Softie.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_item_happy_all_one_growth" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_item_happy_resilience"
                style="@style/Style.Material3.Chip.Softie.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_item_happy_resilience" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_item_happy_new_me"
                style="@style/Style.Material3.Chip.Softie.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_item_happy_new_me" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_item_happy_mindfulness"
                style="@style/Style.Material3.Chip.Softie.Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_item_happy_mindfulness" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/md_happy_add_list_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:dividerColor="@color/gray100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_happy_add_category_button" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcv_happy_add_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/md_happy_add_list_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
