<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sopetit.softie.ui.setting.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_user_exit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_exit_title"
            android:textAppearance="@style/head1"
            android:textColor="@color/gray700"
            android:layout_marginTop="59dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_user_exit_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_exit_content"
            android:textAppearance="@style/body4"
            android:textColor="@color/gray400"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_user_exit_title"
            app:layout_constraintStart_toStartOf="@id/tv_user_exit_title"
            app:layout_constraintEnd_toEndOf="@id/tv_user_exit_title" />

        <TextView
            android:id="@+id/tv_user_exit_speech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_exit_speech_content"
            android:gravity="center"
            android:textAppearance="@style/bubble18"
            android:textColor="@color/gray700"
            android:background="@drawable/ic_speech_bottom"
            android:paddingTop="12dp"
            android:paddingBottom="20dp"
            android:paddingHorizontal="43dp"
            android:layout_marginTop="74dp"
            app:layout_constraintTop_toBottomOf="@id/tv_user_exit_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_user_exit_bear"
            android:layout_width="208dp"
            android:layout_height="208dp"
            android:src="@drawable/ic_bear_brown_crying"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_user_exit_speech"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_user_exit_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_exit_back"
            android:textAppearance="@style/body1"
            android:textColor="@color/gray300"
            android:background="@drawable/shape_gray100_fill_12_rect"
            android:paddingVertical="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="33dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_user_exit_exit"
            android:outlineProvider="none" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_user_exit_exit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/user_exit_exit"
            android:textAppearance="@style/body1"
            android:textColor="@color/gray000"
            android:background="@drawable/shape_red_fill_12_rect"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/btn_user_exit_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_user_exit_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_user_exit_back"
            android:outlineProvider="none" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
