<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:src="@drawable/ic_bear_face_crying"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/head1"
            android:textColor="@color/gray700"
            app:layout_constraintTop_toBottomOf="@id/iv_bottom_sheet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/bottom_sheet_title" />

        <TextView
            android:id="@+id/tv_bottom_sheet_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAppearance="@style/body4"
            android:textColor="@color/gray400"
            app:layout_constraintStart_toStartOf="@id/tv_bottom_sheet_title"
            app:layout_constraintEnd_toEndOf="@id/tv_bottom_sheet_title"
            app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_title"
            tools:text="@string/bottom_sheet_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bottom_sheet_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/body1"
            android:textColor="@color/gray300"
            android:paddingVertical="20dp"
            android:background="@drawable/shape_gray100_fill_12_rect"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="33dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_bottom_sheet_do"
            android:outlineProvider="none"
            tools:text="@string/bottom_sheet_back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bottom_sheet_do"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAppearance="@style/body1"
            android:textColor="@color/gray000"
            android:background="@drawable/shape_main1_fill_12_rect"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/btn_bottom_sheet_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_bottom_sheet_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_bottom_sheet_back"
            android:outlineProvider="none"
            tools:text="@string/bottom_sheet_do" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
