<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sopetit.softie.ui.onboarding.bearnaming.BearNamingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bear_naming"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_bear_naming_question"
            style="@style/head1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/bear_naming_question"
            android:textColor="@color/gray800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bear_naming_subtitle"
            style="@style/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bear_naming_subtitle"
            android:textColor="@color/gray500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bear_naming_question" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_bear_naming_greeting"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="-40dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bear_naming_subtitle"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <EditText
            android:id="@+id/et_bear_naming"
            style="@style/body2"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-70dp"
            android:background="@drawable/shape_gray0_fill_gray300_stroke_radius_99_rect"
            android:gravity="center"
            android:hint="@string/bear_naming_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="12dp"
            android:paddingBottom="11dp"
            android:text="@={viewModel.nickname}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_bear_naming_greeting"
            tools:text="애착이" />

        <TextView
            android:id="@+id/tv_bear_naming_warning"
            style="@style/caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.isLengthExceed?@string/bear_naming_length_warning : @string/bear_naming_special_character_warning}"
            android:textColor="@color/red200"
            android:visibility="@{viewModel.isWarning? View.VISIBLE: View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_bear_naming" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bear_selection"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="34dp"
            android:background="@{viewModel.isNickNameValid ? @drawable/shape_gray650_fill_12_rect : @drawable/shape_gray300_fill_12_rect}"
            android:clickable="@{viewModel.isNickNameValid ? true : false}"
            android:enabled="@{viewModel.isNickNameValid ? true : false}"
            android:text="@string/bear_naming_button"
            android:textAppearance="@style/body1"
            android:textColor="@color/gray100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

